--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,30 @@
 
 
 /* -------------HEADER-------------- */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+    margin:0;
+}
+ul{
+    padding: 0;
+    margin: 0;
+}
+
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header-navigation,
+.header-list,
+.header-first-list{
+display: flex;
+}
 body{
 font-family:"Roboto",sans-serif;
 }
