--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,39 @@
     --footer-text-color:rgba(255, 255, 255, 0.6);
     --second-button-color: #188ce8;
 }
-
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+    margin: 0 ;
+}
+ul{
+    margin: 0;
+    padding: 0;
+}
 
 /* -------------HEADER-------------- */
+.logo{
+    margin-right: 93px;
+    display: flex;
+    align-items: center;
+}
+.log{
+    margin-bottom: 20px;
+display:inline-block ;
+}
+
+.header{
+    border-bottom: 1px solid #ececec;
+}
 body{
 font-family:"Roboto",sans-serif;
 }
 .header-logo{
-font-family: Raleway;
+    font-family: Raleway;
 font-style: normal;
 font-weight: 700;
 font-size: 26px;
@@ -25,6 +50,33 @@ line-height: 1.19;
 letter-spacing: 0.03em;
 color:var(--accent-color);
 }
+.section{
+    padding: 94px 0;
+}
+.container{
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0 15;
+}
+.header-navigation,
+.header-list,
+.header-first-list{
+    display: flex;
+}
+header>.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header-link{
+    display: inline-block;
+    margin-right: 50px;
+    padding: 30 0;
+}
+.header-list li:last-child .header-link{
+    margin-right: 0;
+}
+
 .site-logo{
 font-family: Raleway;
 font-style: 400;
@@ -78,7 +130,8 @@ color: var(--first-text-color);
     color:var(--accent-color);
 }
 .header-tel{
-font-weight: 500;
+margin-left: 50px;
+    font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
@@ -90,10 +143,14 @@ color:var(--accent-color);
 }
 /* -------------------HERO--------------- */
 .hero{
- background-color: var(--first-background-color);
+ padding: 200px 0;
+ max-width: 1600px;
+ margin: 0 auto ;
+    background-color: var(--first-background-color);
 }
 .hero-title{
-font-weight: 900;
+margin-bottom: 30px;
+    font-weight: 900;
 font-size: 44px;
 line-height: 1.36;
 text-align: center;
@@ -102,7 +159,11 @@ text-transform: uppercase;
 color: var(--third-text-color);
 }
 .hero-btn{
-cursor: pointer;
+   padding: 10 32;
+   border-radius: 4px;
+display: block;
+margin: 0 auto;
+    cursor: pointer;
 font-family: inherit;
 font-weight: 700;
 font-size: 16px;
@@ -113,12 +174,27 @@ text-align: center;
 letter-spacing: 0.06em;
 color: #FFFFFF;
 background-color: var(--accent-color)   ;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .hero-btn:hover,
 .hero-btn:focus{
     color:var(--second-button-color) ;
 }
 /* ---------------------Services----------------- */
+.services{
+    padding-bottom: 0;
+}
+.services-list{
+    display: flex;
+    justify-content: space-between;
+}
+.services-list li{
+    margin-right: 30px;
+    width: calc((100%-90px)/4);
+}
+.services-list li:last-child{
+    margin-right:0;
+}
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -132,7 +208,7 @@ background-color: var(--accent-color)   ;
   margin: -1px;
 }
 .services-title{
-
+margin-bottom: 10px;
 font-weight: 700;
 font-size: 14px;
 line-height: 1.14;
@@ -149,9 +225,18 @@ color:var(--first-text-color);
 
 }
 /* ----------------------ABOUT------------------ */
+.about-list{
+    display: flex;
+}
+.about-list li{
+    width: calc((100%-60px)/3);
+    margin-right: 30px;
+}
+about-list li:last-child{
+    margin-right: 0;
+}
 .about-tittle{
-
-font-family: Roboto;
+    font-family: Roboto;
 font-style: normal;
 font-weight: 700;
 font-size: 36px;
@@ -163,7 +248,17 @@ color:var(--main-title-color);
 /* -------------------------TEAM----------------- */
 .team{
 background-color: var(--third-background-color);
-
+}
+.team-list{
+    display: flex;
+    justify-content: space-between;
+}
+.team-list li{
+    width: calc((100%-90px)/4);
+    margin-right: 30px;
+}
+.team-list li:last-child{
+    margin-right: 0;
 }
 .team-title{
 font-weight: 500;
@@ -178,18 +273,22 @@ color: var(--main-title-color);
 
 }
 .team-text{
-font-weight: 400;
+margin-top: 10px;
+    font-weight: 400;
 font-size: 16px;
 line-height: 1.18;
 text-align: center;
 letter-spacing: 0.03em;
 
 color:var(--first-text-color);
-
+}
+.team .container{
+    padding: 30px 0;
 }
 /* ---------------------FOOTER---------------------- */
 .footer{
 background-color:var(--first-background-color) ;
+padding: 60px 0;
 }
 .footer-link{
 font-family: Roboto;
@@ -200,9 +299,8 @@ line-height: 1.71;
 letter-spacing: 0.03em;
 
 color:var(--footer-text-color)
-
-
 }
+
 .logo-second-half{
     color: var(--third-text-color);
 font-family: Raleway;
@@ -211,7 +309,6 @@ font-weight: bold;
 font-size: 26px;
 line-height: 1.19;
 letter-spacing: 0.03em;
-
 }
 .footer-link:hover,
 .footer-link:focus{
@@ -227,9 +324,20 @@ letter-spacing: 0.03em;
 
 color:var(--third-text-color);
 
+}.footer-adress{
+    margin-bottom: 9px;
+}
+    /* --------------btn------------- */
+.list-btn-port{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
 }
 .btn-port{
-cursor: pointer;
+padding: 10px 22px;
+border-radius: 4px;
+margin-right: 8px;
+    cursor: pointer;
 font-style: 400;
 font-weight: 500;
 font-size: 16px;
@@ -244,6 +352,17 @@ background-color:var(--third-background-color)
 .btn-port:focus{
     color: var(--third-text-color);
 background-color: var(--accent-color);
+}
+.port-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: -30px;
+}
+.port-list .port-item{
+    width: calc((100%-60px)/3);
+    margin-bottom: 30px;
+    outline: 1px solid #EEEEEE;
 }
 .title-port{
 font-style: 400;
