--- a/css/styles.css
+++ b/css/styles.css
@@ -10,19 +10,7 @@
     --footer-text-color:rgba(255, 255, 255, 0.6);
     --second-button-color: #188ce8;
 }
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6{
-    margin: 0 ;
-}
-ul{
-    margin: 0;
-    padding: 0;
-}
+
 
 /* -------------HEADER-------------- */
 .logo{
@@ -56,7 +44,7 @@ color:var(--accent-color);
 .container{
     width: 1200px;
     margin: 0 auto;
-    padding: 0 15;
+    padding: 0 15px;
 }
 .header-navigation,
 .header-list,
@@ -69,6 +57,7 @@ header>.container{
     align-items: center;
 }
 .header-link{
+    padding: 31.5px 0;
     display: inline-block;
     margin-right: 50px;
     padding: 30 0;
@@ -159,9 +148,10 @@ text-transform: uppercase;
 color: var(--third-text-color);
 }
 .hero-btn{
-   padding: 10 32;
+   padding: 10px 32px;
    border-radius: 4px;
-display: block;
+border:none;
+   display: block;
 margin: 0 auto;
     cursor: pointer;
 font-family: inherit;
@@ -172,13 +162,16 @@ display: flex;
 align-items: center;
 text-align: center;
 letter-spacing: 0.06em;
-color: #FFFFFF;
+color: var(--third-text-color);
 background-color: var(--accent-color)   ;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .hero-btn:hover,
-.hero-btn:focus{
-    color:var(--second-button-color) ;
+.hero-btn:focus,
+.hero-btn:active{
+    color:var(--third-text-color);
+    background-color: var(--second-button-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);    
 }
 /* ---------------------Services----------------- */
 .services{
@@ -190,7 +183,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .services-list li{
     margin-right: 30px;
-    width: calc((100%-90px)/4);
+    width: calc((100% - 90px)/4);
 }
 .services-list li:last-child{
     margin-right:0;
@@ -235,15 +228,23 @@ color:var(--first-text-color);
 about-list li:last-child{
     margin-right: 0;
 }
-.about-tittle{
-    font-family: Roboto;
-font-style: normal;
+.about-title{
+font-family: Roboto;
+font-style: 400;
 font-weight: 700;
 font-size: 36px;
 line-height: 1.16;
 text-align: center;
 letter-spacing: 0.03em;
+padding-bottom: 50px;
 color:var(--main-title-color);
+}
+
+
+.team-pre-title{
+font-size: 36px;
+text-align: center;
+margin-bottom: 50px;
 }
 /* -------------------------TEAM----------------- */
 .team{
@@ -254,27 +255,34 @@ background-color: var(--third-background-color);
     justify-content: space-between;
 }
 .team-list li{
-    width: calc((100%-90px)/4);
+    width: calc((100%-90px) / 4);
     margin-right: 30px;
 }
 .team-list li:last-child{
     margin-right: 0;
 }
 .team-title{
-font-weight: 500;
+padding: 30px 0 0 0;
+margin-top: 0px;
+ font-weight: 500;
 font-size: 16px;
 line-height: 1.18;
-/* identical to box height */
 text-align: center;
 letter-spacing: 0.03em;
 
 color: var(--main-title-color);
 
-
+}
+.team-item{
+    background: var(--third-text-color);
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
 }
 .team-text{
-margin-top: 10px;
-    font-weight: 400;
+padding: 0 0 30px 0;
+margin-top: 0;
+margin-bottom: 0;    
+font-weight: 400;
 font-size: 16px;
 line-height: 1.18;
 text-align: center;
@@ -334,7 +342,8 @@ color:var(--third-text-color);
     margin-bottom: 50px;
 }
 .btn-port{
-padding: 10px 22px;
+border: none;
+    padding: 6px 12px;
 border-radius: 4px;
 margin-right: 8px;
     cursor: pointer;
@@ -360,12 +369,15 @@ background-color: var(--accent-color);
     margin-bottom: -30px;
 }
 .port-list .port-item{
-    width: calc((100%-60px)/3);
+    width: calc((100% - 60px)/3);
     margin-bottom: 30px;
     outline: 1px solid #EEEEEE;
 }
 .title-port{
-font-style: 400;
+margin-top: 20px;
+padding: 0 24px;
+margin-bottom: 4px;
+    font-style: 400;
 font-weight: 700;
 font-size: 18px;
 line-height: 2;
@@ -375,7 +387,10 @@ color:var(--main-title-color);
 
 }
 .text-port{
-font-style: 400;
+margin-top: 0;
+margin-bottom: 20px;
+padding: 0 24px ;
+    font-style: 400;
 font-weight: 400;
 font-size: 16px;
 line-height: 1.87;
@@ -383,6 +398,10 @@ letter-spacing: 0.03em;
 
 color:var(--first-text-color);
 
+}
+
+.port-item{
+    display: block;
 }
 
 
